Add fallback Mock service for CLIP when service unavailable